--- a/package.json
+++ b/package.json
@@ -14,21 +14,23 @@
     "@shoelace-style/shoelace": "2.8.0"
   },
   "dependencies": {
-    "@lrnwebcomponents/grid-plate": "^7.0.18",
-    "@lrnwebcomponents/play-list": "^7.0.18",
-    "@lrnwebcomponents/count-up": "^7.0.18",
-    "@lrnwebcomponents/simple-cta": "^7.0.18",
-    "@lrnwebcomponents/page-section": "^7.0.18",
-    "@lrnwebcomponents/future-terminal-text": "^7.0.18",
-    "@lrnwebcomponents/utils": "^7.0.18",
-    "@lrnwebcomponents/simple-colors": "^7.0.18",
-    "@lrnwebcomponents/simple-icon": "^7.0.18",
-    "@lrnwebcomponents/hax-iconset": "^7.0.18",
-    "@lrnwebcomponents/simple-img": "^7.0.18",
-    "@lrnwebcomponents/scroll-button": "^7.0.18",
-    "@lrnwebcomponents/rpg-character": "^7.0.18",
+    "@lrnwebcomponents/grid-plate": "^8.0.1",
+    "@lrnwebcomponents/play-list": "^8.0.1",
+    "@lrnwebcomponents/count-up": "^8.0.1",
+    "@lrnwebcomponents/simple-cta": "^8.0.1",
+    "@lrnwebcomponents/page-section": "^8.0.1",
+    "@lrnwebcomponents/future-terminal-text": "^8.0.1",
+    "@lrnwebcomponents/utils": "^8.0.1",
+    "@lrnwebcomponents/simple-colors": "^8.0.1",
+    "@lrnwebcomponents/video-player": "^8.0.1",
+    "@lrnwebcomponents/simple-icon": "^8.0.1",
+    "@lrnwebcomponents/hax-iconset": "^8.0.1",
+    "@lrnwebcomponents/simple-img": "^8.0.1",
+    "@lrnwebcomponents/d-d-d": "^8.0.1",
+    "@lrnwebcomponents/scroll-button": "^8.0.1",
+    "@lrnwebcomponents/rpg-character": "^8.0.1",
     "@shoelace-style/shoelace": "2.8.0",
-    "lit": "^2.8.0"
+    "lit": "^3.1.2"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.16.4",
