--- a/package.json
+++ b/package.json
@@ -14,23 +14,23 @@
     "@shoelace-style/shoelace": "2.8.0"
   },
   "dependencies": {
-    "@lrnwebcomponents/grid-plate": "^8.0.2",
-    "@lrnwebcomponents/play-list": "^8.0.2",
-    "@lrnwebcomponents/count-up": "^8.0.2",
-    "@lrnwebcomponents/simple-cta": "^8.0.2",
-    "@lrnwebcomponents/page-section": "^8.0.2",
-    "@lrnwebcomponents/accent-card": "^8.0.2",
-    "@lrnwebcomponents/future-terminal-text": "^8.0.2",
-    "@lrnwebcomponents/utils": "^8.0.2",
-    "@lrnwebcomponents/simple-colors": "^8.0.2",
-    "@lrnwebcomponents/video-player": "^8.0.2",
-    "@lrnwebcomponents/simple-icon": "^8.0.2",
-    "@lrnwebcomponents/hax-iconset": "^8.0.2",
-    "@lrnwebcomponents/d-d-d": "^8.0.2",
-    "@lrnwebcomponents/scroll-button": "^8.0.2",
-    "@lrnwebcomponents/rpg-character": "^8.0.2",
+    "@haxtheweb/grid-plate": "^9.0.1",
+    "@haxtheweb/play-list": "^9.0.1",
+    "@haxtheweb/count-up": "^9.0.1",
+    "@haxtheweb/simple-cta": "^9.0.1",
+    "@haxtheweb/page-section": "^9.0.1",
+    "@haxtheweb/accent-card": "^9.0.1",
+    "@haxtheweb/future-terminal-text": "^9.0.1",
+    "@haxtheweb/utils": "^9.0.1",
+    "@haxtheweb/simple-colors": "^9.0.1",
+    "@haxtheweb/video-player": "^9.0.1",
+    "@haxtheweb/simple-icon": "^9.0.1",
+    "@haxtheweb/hax-iconset": "^9.0.1",
+    "@haxtheweb/d-d-d": "^9.0.1",
+    "@haxtheweb/scroll-button": "^9.0.1",
+    "@haxtheweb/rpg-character": "^9.0.1",
     "@shoelace-style/shoelace": "2.8.0",
-    "lit": "^3.1.2"
+    "lit": "^3.1.4"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.16.4",
